--- a/Lottery App/View/LotteryPage.xaml
+++ b/Lottery App/View/LotteryPage.xaml
@@ -1,12 +1,14 @@
 ﻿<Page x:Class="Lottery_App.View.LotteryPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Lottery_App.View"
-      mc:Ignorable="d" 
-      d:DesignHeight="650" d:DesignWidth="800"
-      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" Loaded="Page_Loaded"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    MinWidth="800"
+    MinHeight="650"
+    d:DesignHeight="650"
+    d:DesignWidth="800"
       ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
       ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
       Foreground="{DynamicResource TextFillColorPrimaryBrush}" MinWidth="800" MinHeight="650"
