--- a/Lottery App/App.xaml
+++ b/Lottery App/App.xaml
@@ -1,9 +1,10 @@
-﻿<Application x:Class="Lottery_App.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Lottery_App"
-             StartupUri="MainWindow.xaml"
-             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml">
+﻿<Application
+    x:Class="Lottery_App.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:Lottery_App"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
