--- a/Lottery App/View/LotteryPage.xaml
+++ b/Lottery App/View/LotteryPage.xaml
@@ -1,59 +1,130 @@
-﻿<Page x:Class="Lottery_App.View.LotteryPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Lottery_App.View"
+﻿<Page
+    x:Class="Lottery_App.View.LotteryPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Lottery_App.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     MinWidth="800"
     MinHeight="650"
     d:DesignHeight="650"
     d:DesignWidth="800"
-      ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
-      ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-      Foreground="{DynamicResource TextFillColorPrimaryBrush}" MinWidth="800" MinHeight="650"
-      >
+    ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
+    ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+    Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+    Loaded="Page_Loaded"
+    mc:Ignorable="d">
 
     <Grid>
-        <Grid.ColumnDefinitions>
-
-        </Grid.ColumnDefinitions>
+        <Grid.ColumnDefinitions />
         <Grid.RowDefinitions>
-            <RowDefinition Height="400"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="400" />
+            <RowDefinition />
         </Grid.RowDefinitions>
 
-        <ui:ListView x:Name="UsersList" Background="White" Margin="5" FontSize="20"/>
+        <ui:ListView
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
+            VerticalContentAlignment="Center"
+            x:Name="UsersList"
+            Margin="5"
+            Background="White"
+            FontSize="20" />
 
 
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
-                <RowDefinition x:Name="DeleteAndEditRow" Height="*"/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
+                <RowDefinition Height="50" />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
             </Grid.RowDefinitions>
 
             <Grid Grid.Row="0">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition x:Name="DeleteButtonColumn" Width="*"/>
-                    <ColumnDefinition x:Name="EditButtonColumn" Width="*"/>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
 
-                <ui:Button Width="380" Height="55" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <ui:Button
+                    Appearance="Transparent"
+                    Grid.Column="0"
+                    Margin="5"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch">
                     <WrapPanel>
-                        <ui:SymbolIcon Symbol="Delete12" Margin="0,0,5,0"/>
-                        <ui:TextBlock Text="Delete"/>
+                        <ui:SymbolIcon Margin="0,0,5,0" Symbol="ArrowReset48" />
+                        <ui:TextBlock Text="Clear" />
                     </WrapPanel>
                 </ui:Button>
-                <ui:Button Width="380" Height="55" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <ui:Button
+                    Appearance="Transparent"
+                    Grid.Column="1"
+                    Margin="5"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch">
                     <WrapPanel>
-                        <ui:SymbolIcon Symbol="Edit16" Margin="0,0,5,0"/>
-                        <ui:TextBlock Text="Edit"/>
+                        <ui:SymbolIcon Margin="0,0,5,0" Symbol="OpenFolder16" />
+                        <ui:TextBlock Text="Add From Txt" />
                     </WrapPanel>
                 </ui:Button>
 
             </Grid>
+
+            <!--  Edit And Delete Button Grid  -->
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition x:Name="DeleteButtonColumn" Width="*" />
+                    <ColumnDefinition x:Name="EditButtonColumn" Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <ui:Button
+                    Grid.Column="0"
+                    Margin="5"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch">
+                    <WrapPanel>
+                        <ui:SymbolIcon Margin="0,0,5,0" Symbol="Delete12" />
+                        <ui:TextBlock Text="Delete" />
+                    </WrapPanel>
+                </ui:Button>
+                <ui:Button
+                    Grid.Column="1"
+                    Margin="5"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch">
+                    <WrapPanel>
+                        <ui:SymbolIcon Margin="0,0,5,0" Symbol="Edit16" />
+                        <ui:TextBlock Text="Edit" />
+                    </WrapPanel>
+                </ui:Button>
+
+            </Grid>
+            <!--  End  -->
+
+            <!--  Username TextBox Grid  -->
+            <Grid Grid.Row="2">
+                <ui:TextBox
+                    Margin="5"
+                    HorizontalContentAlignment="Center"
+                    VerticalContentAlignment="Center"
+                    ClearButtonEnabled="False"
+                    FontSize="20"
+                    MaxLines="1" />
+            </Grid>
+            <!--  End  -->
+
+            <!--  Add User Button  -->
+
+            <ui:Button
+                Grid.Row="3"
+                Margin="5"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch"
+                Content="add" />
+
+            <!--  End  -->
 
         </Grid>
     </Grid>
