--- a/Lottery App/View/LotteryPage.xaml
+++ b/Lottery App/View/LotteryPage.xaml
@@ -23,14 +23,7 @@
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <ui:ListView
-            HorizontalAlignment="Stretch"
-            VerticalAlignment="Stretch"
-            VerticalContentAlignment="Center"
-            x:Name="UsersList"
-            Margin="5"
-            Background="White"
-            FontSize="20" />
+        <ListBox x:Name="UsersList" HorizontalContentAlignment="Center" />
 
 
         <Grid Grid.Row="1">
@@ -48,22 +41,22 @@
                 </Grid.ColumnDefinitions>
 
                 <ui:Button
-                    Appearance="Transparent"
                     Grid.Column="0"
                     Margin="5"
                     HorizontalAlignment="Stretch"
-                    VerticalAlignment="Stretch">
+                    VerticalAlignment="Stretch"
+                    Appearance="Transparent">
                     <WrapPanel>
                         <ui:SymbolIcon Margin="0,0,5,0" Symbol="ArrowReset48" />
                         <ui:TextBlock Text="Clear" />
                     </WrapPanel>
                 </ui:Button>
                 <ui:Button
-                    Appearance="Transparent"
                     Grid.Column="1"
                     Margin="5"
                     HorizontalAlignment="Stretch"
-                    VerticalAlignment="Stretch">
+                    VerticalAlignment="Stretch"
+                    Appearance="Transparent">
                     <WrapPanel>
                         <ui:SymbolIcon Margin="0,0,5,0" Symbol="OpenFolder16" />
                         <ui:TextBlock Text="Add From Txt" />
@@ -111,7 +104,7 @@
                     VerticalContentAlignment="Center"
                     ClearButtonEnabled="False"
                     FontSize="20"
-                    MaxLines="1" />
+                    MaxLines="1" SelectionBrush="White" />
             </Grid>
             <!--  End  -->
 
@@ -122,7 +115,7 @@
                 Margin="5"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Stretch"
-                Content="add" />
+                Content="Add To List"/>
 
             <!--  End  -->
 
