--- a/Lottery App/MainWindow.xaml
+++ b/Lottery App/MainWindow.xaml
@@ -1,76 +1,125 @@
-﻿<Window x:Class="Lottery_App.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:View="clr-namespace:Lottery_App.View"
-        xmlns:local="clr-namespace:Lottery_App"
-        mc:Ignorable="d"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-        Title="MainWindow" Height="750" Width="1200"
-        MinHeight="750"
-        MinWidth="1200"
-        WindowState="Normal"
-        WindowStartupLocation="CenterScreen"
-        WindowStyle="None"
-        Background="{ui:ThemeResource}"
-        >
+﻿<Window
+    x:Class="Lottery_App.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:View="clr-namespace:Lottery_App.View"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Lottery_App"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    Title="MainWindow"
+    Width="1200"
+    Height="750"
+    MinWidth="1200"
+    MinHeight="750"
+    Background="{ui:ThemeResource}"
+    Loaded="Window_Loaded"
+    WindowStartupLocation="CenterScreen"
+    WindowState="Normal"
+    WindowStyle="None"
+    mc:Ignorable="d">
     <WindowChrome.WindowChrome>
-        <WindowChrome CornerRadius="5" CaptionHeight="0" GlassFrameThickness="0"/>
+        <WindowChrome
+            CaptionHeight="0"
+            CornerRadius="5"
+            GlassFrameThickness="0" />
     </WindowChrome.WindowChrome>
     <Grid>
-        <Grid.ColumnDefinitions>
-            
-        </Grid.ColumnDefinitions>
+        <Grid.ColumnDefinitions />
         <Grid.RowDefinitions>
-            <RowDefinition x:Name="ToolBox" Height="30"/>
-            <RowDefinition/>
+            <RowDefinition x:Name="ToolBox" Height="30" />
+            <RowDefinition />
         </Grid.RowDefinitions>
-        <WrapPanel Background="#ffff" Opacity="0" x:Name="DragMousePanel" MouseDown="DragMousePanel_EventHandler"/>
-        <WrapPanel HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0">
-            <ui:SymbolIcon Symbol="Lottery24" Foreground="#ffff" Margin="0,0,5,0"/>
-            <ui:TextBlock Text="Lottery App" Foreground="#ffff"/>
+        <WrapPanel
+            x:Name="DragMousePanel"
+            Background="#ffff"
+            MouseDown="DragMousePanel_EventHandler"
+            Opacity="0" />
+        <WrapPanel
+            Margin="10,0,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center">
+            <ui:SymbolIcon
+                Margin="0,0,5,0"
+                Foreground="#ffff"
+                Symbol="Lottery24" />
+            <ui:TextBlock Foreground="#ffff" Text="Lottery App" />
         </WrapPanel>
         <WrapPanel HorizontalAlignment="Right">
-            <ui:Button Background="{ui:ThemeResource}" CornerRadius="0" HorizontalAlignment="Right" Margin="0,0,0.1,0" Padding="0" Width="30" Height="30" BorderThickness="0">
+            <ui:Button
+                Width="30"
+                Height="30"
+                Margin="0,0,0.1,0"
+                Padding="0"
+                HorizontalAlignment="Right"
+                Background="{ui:ThemeResource}"
+                BorderThickness="0"
+                CornerRadius="0">
                 <WrapPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-                    <ui:SymbolIcon Symbol="LineHorizontal120" Foreground="#FFFF"/>
+                    <ui:SymbolIcon Foreground="#FFFF" Symbol="LineHorizontal120" />
                 </WrapPanel>
             </ui:Button>
-            <ui:Button Background="{ui:ThemeResource}" CornerRadius="0" HorizontalAlignment="Right" Margin="0,0,0.1,0" Padding="0" Width="30" Height="30" BorderThickness="0">
+            <ui:Button
+                Width="30"
+                Height="30"
+                Margin="0,0,0.1,0"
+                Padding="0"
+                HorizontalAlignment="Right"
+                Background="{ui:ThemeResource}"
+                BorderThickness="0"
+                CornerRadius="0">
                 <WrapPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-                    <ui:SymbolIcon Symbol="Maximize16" Foreground="#FFFF"/>
+                    <ui:SymbolIcon Foreground="#FFFF" Symbol="Maximize16" />
                 </WrapPanel>
             </ui:Button>
-            <ui:Button Background="{ui:ThemeResource}" CornerRadius="0" HorizontalAlignment="Right" Margin="0,0,0.1,0" Padding="0" Width="30" Height="30" BorderThickness="0">
+            <ui:Button
+                Width="30"
+                Height="30"
+                Margin="0,0,0.1,0"
+                Padding="0"
+                HorizontalAlignment="Right"
+                Background="{ui:ThemeResource}"
+                BorderThickness="0"
+                CornerRadius="0">
                 <WrapPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-                    <ui:SymbolIcon Symbol="Dismiss12" Foreground="#FFFF"/>
+                    <ui:SymbolIcon Foreground="#FFFF" Symbol="Dismiss12" />
                 </WrapPanel>
             </ui:Button>
         </WrapPanel>
-        
-        <ui:NavigationView x:Name="RootNavigation" Grid.Row="1" IsBackButtonVisible="Collapsed" PaneTitle="Menu" PaneDisplayMode="Left" OpenPaneLength="150" IsPaneVisible="True" Loaded="RootNavigation_Loaded">
-            
+
+        <ui:NavigationView
+            x:Name="RootNavigation"
+            Grid.Row="1"
+            IsBackButtonVisible="Collapsed"
+            IsPaneVisible="True"
+            Loaded="RootNavigation_Loaded"
+            OpenPaneLength="150"
+            PaneDisplayMode="Left"
+            PaneTitle="Menu">
+
             <ui:NavigationView.Header>
-                <ui:BreadcrumbBar Margin="42,32,0,0" FontSize="28" FontWeight="DemiBold" />
+                <ui:BreadcrumbBar
+                    Margin="42,32,0,0"
+                    FontSize="28"
+                    FontWeight="DemiBold" />
             </ui:NavigationView.Header>
-            
+
             <ui:NavigationView.MenuItems>
-                <ui:NavigationViewItem Content="Dashboard" TargetPageType="{x:Type View:LotteryPage}" >
+                <ui:NavigationViewItem Content="Dashboard" TargetPageType="{x:Type View:LotteryPage}">
                     <ui:NavigationViewItem.Icon>
                         <ui:SymbolIcon Symbol="Home24" />
                     </ui:NavigationViewItem.Icon>
                 </ui:NavigationViewItem>
             </ui:NavigationView.MenuItems>
-            
+
             <ui:NavigationView.FooterMenuItems>
-                <ui:NavigationViewItem Content="Settings" >
+                <ui:NavigationViewItem Content="Settings">
                     <ui:NavigationViewItem.Icon>
                         <ui:SymbolIcon Symbol="Settings24" />
                     </ui:NavigationViewItem.Icon>
                 </ui:NavigationViewItem>
             </ui:NavigationView.FooterMenuItems>
-            
+
         </ui:NavigationView>
     </Grid>
 </Window>
