--- a/Lottery App/View/LotteryPage.xaml
+++ b/Lottery App/View/LotteryPage.xaml
@@ -22,7 +22,6 @@
             <RowDefinition Height="400" />
             <RowDefinition />
         </Grid.RowDefinitions>
-
         <ui:ListView
             x:Name="UsersList"
             HorizontalContentAlignment="Center"
@@ -51,7 +50,8 @@
                     Margin="5"
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Stretch"
-                    Appearance="Transparent">
+                    Appearance="Transparent"
+                    Command="{Binding ClearListCommand}">
                     <WrapPanel>
                         <ui:SymbolIcon Margin="0,0,5,0" Symbol="ArrowReset48" />
                         <ui:TextBlock Text="Clear" />
