Add KeyDown Event For UsernameTextBox

--- a/Lottery App/View/LotteryPage.xaml
+++ b/Lottery App/View/LotteryPage.xaml
@@ -114,7 +114,7 @@
                     MaxLines="1"
                     PlaceholderText="Name"
                     SelectionBrush="White"
-                    Text="{Binding UserName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    Text="{Binding UserName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" KeyDown="TextBox_KeyDown" />
             </Grid>
             <!--  End  -->
 
