--- a/Lottery App/View/LotteryPage.xaml
+++ b/Lottery App/View/LotteryPage.xaml
@@ -26,9 +26,8 @@
             x:Name="UsersList"
             HorizontalContentAlignment="Center"
             DisplayMemberPath="Name"
-            ItemsSource="{Binding Items}"
-            SelectedItem="{Binding SelectedItem}"
-            SelectionMode="Single" />
+            ItemsSource="{Binding Items, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            SelectedItem="{Binding SelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
 
         <Grid Grid.Row="1">
@@ -93,7 +92,8 @@
                     Grid.Column="1"
                     Margin="5"
                     HorizontalAlignment="Stretch"
-                    VerticalAlignment="Stretch">
+                    VerticalAlignment="Stretch"
+                    Command="{Binding EditUserNameCommand}">
                     <WrapPanel>
                         <ui:SymbolIcon Margin="0,0,5,0" Symbol="Edit16" />
                         <ui:TextBlock Text="Edit" />
@@ -111,10 +111,11 @@
                     VerticalContentAlignment="Center"
                     ClearButtonEnabled="False"
                     FontSize="20"
+                    KeyDown="TextBox_KeyDown"
                     MaxLines="1"
                     PlaceholderText="Name"
                     SelectionBrush="White"
-                    Text="{Binding UserName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" KeyDown="TextBox_KeyDown" />
+                    Text="{Binding UserName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             </Grid>
             <!--  End  -->
 
