--- a/Lottery App/View/ShowWinner.xaml
+++ b/Lottery App/View/ShowWinner.xaml
@@ -20,12 +20,73 @@
             CornerRadius="5"
             GlassFrameThickness="0" />
     </WindowChrome.WindowChrome>
+    <Window.Resources>
+        <Storyboard
+            x:Key="Storyboard"
+            BeginTime="00:00:00.000"
+            Duration="00:00:10.000">
+            <DoubleAnimation
+                BeginTime="00:00:05.000"
+                Storyboard.TargetName="RotateImage"
+                Storyboard.TargetProperty="(UIElement.RenderTransform).(RotateTransform.Angle)"
+                From="0"
+                To="360"
+                Duration="00:00:05.000" />
+            <DoubleAnimation
+                Storyboard.TargetName="OpacityImage"
+                Storyboard.TargetProperty="Opacity"
+                From="1"
+                To="0"
+                Duration="00:00:10.000" />
+        </Storyboard>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition />
             <RowDefinition />
         </Grid.RowDefinitions>
+        <TextBlock
+            x:Name="TitleTxt"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            FontSize="50"
+            Foreground="White"
+            Text="Who Will Win?" />
+        <TextBlock
+            x:Name="FooterTxt"
+            Grid.Row="2"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            FontSize="35"
+            Foreground="White"
+            Text="{Binding WinnerName,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" />
+
+        <WrapPanel
+            Grid.Row="1"
+            Margin="300,0,0,0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center">
+            <ui:SymbolIcon
+                x:Name="SpinnerIcon"
+                Width="100"
+                Height="100"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                FontSize="50"
+                Foreground="White"
+                RenderTransformOrigin="0.5,0.5"
+                Symbol="Triangle16">
+                <ui:SymbolIcon.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform />
+                        <SkewTransform />
+                        <RotateTransform Angle="-90" />
+                        <TranslateTransform />
+                    </TransformGroup>
+                </ui:SymbolIcon.RenderTransform>
+            </ui:SymbolIcon>
+        </WrapPanel>
         <Border
             x:Name="Spinner"
             Grid.Row="1"
@@ -34,8 +95,22 @@
             Background="#FF2D2D2D"
             CornerRadius="100"
             RenderTransformOrigin="0.5,0.5">
+            <Border.Triggers>
+                <EventTrigger RoutedEvent="Loaded">
+                    <BeginStoryboard>
+                        <Storyboard RepeatBehavior="Forever">
+                            <DoubleAnimation
+                                Storyboard.TargetName="Spinner"
+                                Storyboard.TargetProperty="(Border.RenderTransform).(RotateTransform.Angle)"
+                                From="0"
+                                To="1080"
+                                Duration="0:0:2" />
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+            </Border.Triggers>
             <Border.RenderTransform>
-                <RotateTransform x:Name="SpinnerTransform" CenterX="50" CenterY="50" />
+                <RotateTransform x:Name="SpinnerTransform" />
             </Border.RenderTransform>
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -68,6 +143,38 @@
                     Grid.Row="1"
                     Grid.Column="0"
                     Fill="DarkGray" />
+                <TextBlock
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontSize="30"
+                    Foreground="White"
+                    Text="?" />
+                <TextBlock
+                    Grid.Row="0"
+                    Grid.Column="2"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontSize="30"
+                    Foreground="White"
+                    Text="?" />
+                <TextBlock
+                    Grid.Row="2"
+                    Grid.Column="0"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontSize="30"
+                    Foreground="White"
+                    Text="?" />
+                <TextBlock
+                    Grid.Row="2"
+                    Grid.Column="2"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontSize="30"
+                    Foreground="White"
+                    Text="?" />
             </Grid>
 
         </Border>
