Complete the viewmodel

--- a/Lottery App/MainWindow.xaml
+++ b/Lottery App/MainWindow.xaml
@@ -124,7 +124,7 @@
 
 
             <ui:NavigationView.FooterMenuItems>
-                <ui:NavigationViewItem Content="Settings">
+                <ui:NavigationViewItem Content="Settings" TargetPageType="{x:Type View:SettingsPage}">
                     <ui:NavigationViewItem.Icon>
                         <ui:SymbolIcon Symbol="Settings24" />
                     </ui:NavigationViewItem.Icon>
