--- a/Lottery App/View/SettingsPage.xaml
+++ b/Lottery App/View/SettingsPage.xaml
@@ -27,10 +27,56 @@
             FontSize="30"
             Text="Reserved Names" />
         <ui:ListView
-            Grid.Row="1"
             x:Name="UsersList"
+            Grid.Row="1"
             HorizontalContentAlignment="Center"
             DisplayMemberPath="Name"
-            ItemsSource="{Binding Items, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            ItemsSource="{Binding ReservedNames, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            SelectedItem="{Binding SelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+        <Grid Grid.Row="2">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <ui:TextBox
+                Grid.Row="0"
+                Margin="5"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                ClearButtonEnabled="False"
+                FontSize="20"
+                MaxLines="1"
+                PlaceholderText="Name"
+                SelectionBrush="White"
+                Text="{Binding UserName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <ui:Button
+                    Grid.Column="1"
+                    Margin="5"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                    Command="{Binding AddToListCommand}">
+                    <WrapPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <ui:SymbolIcon Margin="0,0,5,0" Symbol="Add48" />
+                        <ui:TextBlock Text="Add To List" />
+                    </WrapPanel>
+                </ui:Button>
+                <ui:Button
+                    Grid.Column="0"
+                    Margin="5"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                    Command="{Binding RemoveFromListCommand}">
+                    <WrapPanel>
+                        <ui:SymbolIcon Margin="0,0,5,0" Symbol="Delete12" />
+                        <ui:TextBlock Text="Delete" />
+                    </WrapPanel>
+                </ui:Button>
+            </Grid>
+        </Grid>
     </Grid>
 </Page>
