--- a/Lottery App/View/ShowWinner.xaml
+++ b/Lottery App/View/ShowWinner.xaml
@@ -20,26 +20,6 @@
             CornerRadius="5"
             GlassFrameThickness="0" />
     </WindowChrome.WindowChrome>
-    <Window.Resources>
-        <Storyboard
-            x:Key="Storyboard"
-            BeginTime="00:00:00.000"
-            Duration="00:00:10.000">
-            <DoubleAnimation
-                BeginTime="00:00:05.000"
-                Storyboard.TargetName="RotateImage"
-                Storyboard.TargetProperty="(UIElement.RenderTransform).(RotateTransform.Angle)"
-                From="0"
-                To="360"
-                Duration="00:00:05.000" />
-            <DoubleAnimation
-                Storyboard.TargetName="OpacityImage"
-                Storyboard.TargetProperty="Opacity"
-                From="1"
-                To="0"
-                Duration="00:00:10.000" />
-        </Storyboard>
-    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition />
@@ -47,12 +27,22 @@
             <RowDefinition />
         </Grid.RowDefinitions>
         <TextBlock
+            x:Name="CloseTxt"
+            Margin="10"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Top"
+            FontSize="20"
+            Foreground="White"
+            MouseDown="CloseTxt_MouseDown"
+            Text="Close"
+            Visibility="Hidden" />
+        <TextBlock
             x:Name="TitleTxt"
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
             FontSize="50"
             Foreground="White"
-            Text="Who Will Win?" />
+            Text="{Binding TitleText,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" />
         <TextBlock
             x:Name="FooterTxt"
             Grid.Row="2"
@@ -60,7 +50,7 @@
             VerticalAlignment="Center"
             FontSize="35"
             Foreground="White"
-            Text="{Binding WinnerName,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" />
+            Text="{Binding WinnerName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
         <WrapPanel
             Grid.Row="1"
@@ -86,6 +76,20 @@
                     </TransformGroup>
                 </ui:SymbolIcon.RenderTransform>
             </ui:SymbolIcon>
+        </WrapPanel>
+        <WrapPanel
+            Grid.Row="1"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center">
+            <ui:SymbolIcon
+                x:Name="WinnerIcon"
+                Width="200"
+                Height="200"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                FontSize="150"
+                Foreground="White"
+                Symbol="Crown16" />
         </WrapPanel>
         <Border
             x:Name="Spinner"
