--- a/Lottery App/View/LotteryPage.xaml
+++ b/Lottery App/View/LotteryPage.xaml
@@ -61,7 +61,8 @@
                     Margin="5"
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Stretch"
-                    Appearance="Transparent">
+                    Appearance="Transparent"
+                    Command="{Binding AddFromTxtCommand}">
                     <WrapPanel>
                         <ui:SymbolIcon Margin="0,0,5,0" Symbol="OpenFolder16" />
                         <ui:TextBlock Text="Add From Txt" />
