--- a/Lottery App/View/LotteryPage.xaml
+++ b/Lottery App/View/LotteryPage.xaml
@@ -19,8 +19,8 @@
     <Grid>
         <Grid.ColumnDefinitions />
         <Grid.RowDefinitions>
-            <RowDefinition Height="400" />
-            <RowDefinition />
+            <RowDefinition Height="400" MaxHeight="600" />
+            <RowDefinition MaxHeight="300"/>
         </Grid.RowDefinitions>
         <ui:ListView
             x:Name="UsersList"
