--- a/Lottery App/View/MainPage.xaml
+++ b/Lottery App/View/MainPage.xaml
@@ -13,23 +13,27 @@
     ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
     ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+    SizeChanged="Page_SizeChanged"
     mc:Ignorable="d">
 
     <Grid>
         <Grid.ColumnDefinitions />
         <Grid.RowDefinitions>
-            <RowDefinition MaxHeight="550" />
+            <RowDefinition Height="550" />
+            <RowDefinition MaxHeight="300" />
             <RowDefinition Height="100" />
         </Grid.RowDefinitions>
         <ui:ListView
             x:Name="UsersList"
             Margin="0,0,0,10"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
             HorizontalContentAlignment="Center"
             DisplayMemberPath="Name"
             ItemsSource="{Binding Items, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-
+        
         <ui:Button
-            Grid.Row="1"
+            Grid.Row="2"
             Margin="5"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
